--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,5 @@
+
+
 /**
 * Template Name: UpConstruction - v1.3.0
 * Template URL: https://bootstrapmade.com/upconstruction-bootstrap-construction-website-template/
@@ -1206,7 +1208,10 @@ section {
   background-position: center center;
   min-height: 400px;
 }
-
+.custom-column {
+  padding-left: 5px;
+  padding-right: 5px;
+}
 .alt-services h3 {
   font-size: 28px;
   font-weight: 700;
